--- a/meetme-server/src/main/HTML/login.css
+++ b/meetme-server/src/main/HTML/login.css
@@ -4,32 +4,46 @@ html, body {
     height: 100%;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     color: #444;
-    -webkit-font-smoothing: antialiased; background: #f0f0f0;
+    -webkit-font-smoothing: antialiased;
+    /*background: #f0f0f0;*/
+}
+#background {
+    margin-top: 0;
+    background-image: url(photo-1519085731353-fb9924fadee7.jpg);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
 }
 #choice {
-    
+    color: transparent;
 }
 #signup {
     position: fixed;
     width: 340px;
-    height: 280px;
+    height: 450px;
     top: 40%;
-    left: 50%;
+    left: 80%;
     margin-top: -140px;
     margin-left: -170px;
     display:none;
+    background: #FBF0EE;
 }
 /* login-style additional */
 #container {
     position: fixed;
     width: 340px;
-    height: 280px;
+    height: 300px;
     top: 50%;
-    left: 50%;
+    left: 80%;
     margin-top: -140px;
     margin-left: -170px;
-     display:none;
-   
+    display:none;
+    background: #FBF0EE;
 }
 /* login-style making it pretty */
 form {
@@ -70,7 +84,7 @@ input[type=password] {
     height: 35px;
 }
 #lower {
-    background: #ecf2f5;
+    /*background: #ecf2f5;*/
     width: 100%;
     height: 69px;
     margin-top: 20px;
