--- a/meetme-server/src/main/HTML/login.css
+++ b/meetme-server/src/main/HTML/login.css
@@ -12,7 +12,7 @@ html, body {
    /* margin-right: 0;
     margin-bottom: 0;
     margin-left: 0;*/
-    background-image: url(palm-trees-sky_4460x4460.jpg);
+    background-image: url(beach-1867285_1280.jpg);
     width: 100%;
     height: 100%;
     background-size: 100% 100vh;
@@ -23,10 +23,12 @@ html, body {
     z-index: -1;
 }
 #slogan {
-    color: transparent;
-    font-size: 90px;
+    color: white;
+    font-size: 80px;
     text-emphasis: bold;
     margin-left: 70px;
+    width: 500px;
+    text-align: center;
 }
 /*
 #choice {
@@ -41,23 +43,28 @@ html, body {
 */
 
 #buttonCreate{
-    background-color: #FBF0EE;
+    background-color: pink;
     border: none;
-    width: 150px;
+    width: 320px;
     height: 50px;
     position: absolute;
-    top: 87%;
-    margin-left: 70px;
+    top: 75%;
+    margin-left: 855px;
+    z-index: 2;
+    border-radius: 5px;
 }
 
 #buttonLogin{
-    background-color: #FBF0EE;
+    background-color: pink;
     border: none;
-    width: 150px;
+    width: 190px;
     height: 50px;
     position: absolute;
-    top: 87%;
-    margin-left: 235px;
+    top: 80%;
+    margin-left: 860px;
+    display: none;
+    z-index: 2;
+    border-radius: 5px;
 }
 #buttonCreate:hover{
     cursor: pointer;
@@ -76,19 +83,30 @@ html, body {
     margin-top: -140px;
     margin-left: -170px;
     display:none;
-    background: #FBF0EE;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0;
 }
 /* login-style additional */
 #container {
     position: absolute;
     width: 340px;
-    height: 300px;
-    top: 50%;
+    height: 400px;
+    top: 45%;
     left: 80%;
     margin-top: -140px;
     margin-left: -170px;
-    display:none;
-    background: #FBF0EE;
+    display:block;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0;
+}
+#sign-in1 {
+    position: absolute;
+    margin-top: -10px;
+    margin-left: 20px;
+    background: white;
+    font-size: 20px;
 }
 /* login-style making it pretty */
 form {
