--- a/frontend/static/html/login.css
+++ b/frontend/static/html/login.css
@@ -25,10 +25,12 @@ html, body {
 #slogan {
     color: white;
     font-size: 80px;
+    font-family: "Palatino Linotype", "Book Antiqua", sans-serif;
     text-emphasis: bold;
     margin-left: 70px;
     width: 500px;
     text-align: center;
+
 }
 /*
 #choice {
@@ -43,7 +45,7 @@ html, body {
 */
 
 #buttonCreate{
-    background-color: pink;
+    background-color: #E9AD9C;
     border: none;
     width: 320px;
     height: 50px;
@@ -55,17 +57,18 @@ html, body {
 }
 
 #buttonLogin{
-    background-color: pink;
+    background-color: #E9AD9C;
     border: none;
     width: 190px;
     height: 50px;
     position: absolute;
-    top: 80%;
+    top: 87%;
     margin-left: 860px;
     display: none;
     z-index: 2;
     border-radius: 5px;
 }
+
 #buttonCreate:hover{
     cursor: pointer;
     opacity: 0.9;
@@ -80,7 +83,7 @@ html, body {
     height: 450px;
     top: 40%;
     left: 80%;
-    margin-top: -140px;
+    margin-top: -240px;
     margin-left: -170px;
     display:none;
     background: white;
@@ -142,9 +145,9 @@ input[type=password] {
     padding-left: 10px;
     margin: 10px;
     margin-top: 12px;
-    margin-left: 18px;
+    margin-left: 16px;
     width: 290px;
-    height: 35px;
+    height: 30px;
 }
 #lower {
     /*background: #ecf2f5;*/
