--- a/frontend/static/html/index.css
+++ b/frontend/static/html/index.css
@@ -1,9 +1,7 @@
 ﻿body {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     color: #333;
-
 }
-
 
 /* Two image containers including the compared images*/
 .column1 {
@@ -12,7 +10,8 @@
     width: 50%;
     padding: 5px;
     margin-left: 200px;
-    margin-right: 15px;align-content: center;
+    margin-right: 15px;
+    align-content: center;
     cursor: pointer;
 }
 
@@ -33,21 +32,6 @@
     opacity: 0.8;
 }
 
-
-
-
-/* Clear floats after image containers */
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.row {
-    display: flex;
-
-}
-
 .column {
     flex: 50%;
     padding: 5px;
@@ -59,18 +43,17 @@
     margin-left: 200px;
     margin-right: 15px;
     width: 50%;
-
 }
 .column2 {
     display: block;
     margin-left: 15px;
     margin-right: 200px;
     width: 50%;
-
 }
 
 /*Placing the container in the vertical center of the page */
 .row {
+    display: flex;
     margin-top: auto;
     margin-bottom: 10%;
 }
@@ -83,10 +66,10 @@
     font-size: 20px;
     margin-top: 65px;
     margin-bottom: 65px;
-
 }
 
 /* homepage ende */
+
 /* Profile Page code */
 
 #profile-picture{
