create shootout button formatiert

--- a/frontend/static/html/compare.css
+++ b/frontend/static/html/compare.css
@@ -2,7 +2,11 @@
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     color: #333;
 }
+/* Compare page code*/
 
+#navbar {
+position: fixed;
+}
 /* Changes the color of pictures on hover*/
 .column1:hover #image1 {
   opacity: 0.8;
@@ -12,18 +16,19 @@
   opacity: 0.8;
     cursor: pointer;
 }
+#image_container {
+    margin-left:25%;
+}
 
-/* section zentrieren*/
 #heading{
     position: static;
-    text-align-last: center;
+    text-align: center;
     line-height: 15px;
     font-size: 20px;
     margin-top: 65px;
     margin-bottom: 65px;
 }
-
-/* homepage ende */
+/* compare page end */
 
 /* Profile Page code */
 
@@ -112,11 +117,13 @@ cursor: pointer;
 #sidebar {
     padding:15px;
     margin-top:10px;
+    position: fixed;
 }
 
 #search_shootout {
     margin-top: 15px;
     margin-bottom: 15px;
+
 }
 
 #create_shootout {
