placeholder index page

--- a/frontend/static/html/index.css
+++ b/frontend/static/html/index.css
@@ -71,7 +71,7 @@ html, body {
     z-index: 2;
     border-radius: 5px;
 }
-/* creates Help Button*/
+/* creates Help Button LogIn*/
     .help{
     background-color: #E9AD9C;
     border: none;
@@ -118,6 +118,55 @@ html, body {
     .help:hover{
     cursor: pointer;
     opacity: 0.9;}
+
+/* Creates Help Button register*/
+.helpRe{
+    display: inline-block;
+    background-color: #E9AD9C;
+    border: none;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    margin-left: 1140px;
+    bottom: 560px;
+    z-index: 2;
+    border-radius: 5px;
+    }
+    .helpRe .helpText{
+    visibility: hidden;
+    width: 150px;
+    height: 80px;
+    background-color: #E9AD9C;
+    color: black;
+    text-align: center;
+    border-radius: 5px;
+    padding: 7px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: -155%;
+    left: -230%;
+    margin-left: -70px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    }
+    .helpRe .helpText::after{
+    content: "";
+    position: absolute;
+    top: 10%;
+    left: 100%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #E9AD9C transparent transparent transparent;
+    }
+    .helpRe:hover .helpText{
+    visibility: visible;
+    opacity: 1;
+    }
+    .helpRe:hover{
+    cursor: pointer;
+    opacity: 0.9;}
+
 
 
 #buttonCreate:hover{
