--- a/frontend/static/html/compare.css
+++ b/frontend/static/html/compare.css
@@ -65,20 +65,53 @@
     top: 31%;
 }
 
-#buttonHelp{
-position: fixed;
-border-radius: 5px;
-height: 40px;
-width: 50px;
-background-color:#E9AD9C;
-top: 10%;
-margin-left: 1200px;
-border:none;
-}
-#buttonHelp:hover{
-cursor: pointer;
-    opacity: 0.9;
- }
+/* creates Help Button*/
+    .helpBtn1{
+    background-color: #E9AD9C;
+    border: none;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    margin-left: 1220px;
+    display: inline-block;
+    bottom: 515px;
+    z-index: 2;
+    border-radius: 5px;
+    }
+    .helpBtn1 .helpText{
+    visibility: hidden;
+    width: 150px;
+    height: 170px;
+    background-color: #E9AD9C;
+    color: black;
+    text-align: center;
+    border-radius: 5px;
+    padding: 7px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: -331%;
+    left: -230%;
+    margin-left: -70px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    }
+    .helpBtn1 .helpText::after{
+    content: "";
+    position: absolute;
+    top: 10%;
+    left: 100%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #E9AD9C transparent transparent transparent;
+    }
+    .helpBtn1:hover .helpText{
+    visibility: visible;
+    opacity: 1;
+    }
+    .helpBtn1:hover{
+    cursor: pointer;
+    opacity: 0.9;}
 
 /*Sidebar left*/
 @import url("https://bootswatch.com/flatly/bootstrap.min.css");
