--- a/frontend/static/html/shootout.css
+++ b/frontend/static/html/shootout.css
@@ -28,3 +28,100 @@ a{
     margin-top: 80px;
     text-align: center;
 }
+
+
+/* creates Help Button ShootoutRanking*/
+     .helpBtn3{
+     background-color: #E9AD9C;
+     border: none;
+     width: 40px;
+     height: 40px;
+     position: fixed;
+     margin-left: 1142px;
+     display: inline-block;
+     bottom: 512px;
+     z-index: 2;
+     border-radius: 5px;
+     }
+     .helpBtn3 .helpText{
+     visibility: hidden;
+     width: 150px;
+     height: 165px;
+     background-color: #E9AD9C;
+     color: black;
+     text-align: center;
+     border-radius: 5px;
+     padding: 7px 0;
+     position: absolute;
+     z-index: 1;
+     bottom: -315%;
+     left: -230%;
+     margin-left: -70px;
+     opacity: 0;
+     transition: opacity 0.3s;
+     }
+     .helpBtn3 .helpText::after{
+     content: "";
+     position: absolute;
+     top: 10%;
+     left: 100%;
+     margin-left: -5px;
+     border-width: 5px;
+     border-style: solid;
+     border-color: #E9AD9C transparent transparent transparent;
+     }
+     .helpBtn3:hover .helpText{
+     visibility: visible;
+     opacity: 1;
+     }
+     .helpBtn3:hover{
+     cursor: pointer;
+     opacity: 0.9;}
+
+   /* creates Help Button ShootoutRanking*/
+         .helpBtn4{
+         background-color: #E9AD9C;
+         border: none;
+         width: 40px;
+         height: 50px;
+         position: fixed;
+         margin-left: 1140px;
+         display: inline-block;
+         bottom: 420px;
+         z-index: 2;
+         border-radius: 5px;
+         }
+         .helpBtn4 .helpText{
+         visibility: hidden;
+         width: 150px;
+         height: 170px;
+         background-color: #E9AD9C;
+         color: black;
+         text-align: center;
+         border-radius: 5px;
+         padding: 7px 0;
+         position: absolute;
+         z-index: 1;
+         bottom: -21%;
+         left: -230%;
+         margin-left: -70px;
+         opacity: 0;
+         transition: opacity 0.3s;
+         }
+         .helpBtn4 .helpText::after{
+         content: "";
+         position: absolute;
+         top: 80%;
+         left: 100%;
+         margin-left: -5px;
+         border-width: 5px;
+         border-style: solid;
+         border-color: #E9AD9C transparent transparent transparent;
+         }
+         .helpBtn4:hover .helpText{
+         visibility: visible;
+         opacity: 1;
+         }
+         .helpBtn4:hover{
+         cursor: pointer;
+         opacity: 0.9;}
