--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -164,9 +164,50 @@
     border-radius: 5px;
     margin-top: 15px;
 }
+/*Button im Modal-Fenster*/
+#createShootout{
+    background:#E9AD9C;
+    padding: 0.5em 1em;
+    color:#fff;
+    border:0;
+    border-radius: 5px;
+}
 /* End Sidebar left*/
 
 footer {
   padding-left: 15px;
   padding-right: 15px;
+}
+/* The Modal (background) */
+.modal{
+    display:none;
+    position:fixed;
+    z-index: 10;
+    left:0;
+    top:0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+}
+
+
+.modal-content{
+    background-color:#fafafa;
+    margin:15% auto;
+    padding:20px;
+    width: 29%;
+    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0.17);
+    animation-name:modalopen;
+    animation-duration: 1s;
+}
+.close{
+    color:#ccc;
+    float: right;
+    font-size:30px;
+}
+.close:hover, close:focus{
+    color:#000;
+    text-decoration: none;
+    cursor:pointer;
 }
