help buttons text (compare,allusers,shootoutRanking, shootoutÜbersicht)

--- a/frontend/static/html/shootout.css
+++ b/frontend/static/html/shootout.css
@@ -21,7 +21,7 @@ a{
 }
 
 #ShootoutÜbersicht {
-    margin-top: 80px;
+    margin-top: 130px;
 }
 
 #ranking {
@@ -78,23 +78,23 @@ a{
      cursor: pointer;
      opacity: 0.9;}
 
-   /* creates Help Button ShootoutRanking*/
+   /* creates Help Button ShootoutÜbersicht*/
          .helpBtn4{
          background-color: #E9AD9C;
          border: none;
          width: 40px;
-         height: 50px;
+         height: 40px;
          position: fixed;
-         margin-left: 1140px;
+         margin-left: 1233px;
          display: inline-block;
-         bottom: 420px;
+         bottom: 511px;
          z-index: 2;
          border-radius: 5px;
          }
          .helpBtn4 .helpText{
          visibility: hidden;
          width: 150px;
-         height: 170px;
+         height: 100px;
          background-color: #E9AD9C;
          color: black;
          text-align: center;
@@ -102,7 +102,7 @@ a{
          padding: 7px 0;
          position: absolute;
          z-index: 1;
-         bottom: -21%;
+         bottom: -150%;
          left: -230%;
          margin-left: -70px;
          opacity: 0;
@@ -111,7 +111,7 @@ a{
          .helpBtn4 .helpText::after{
          content: "";
          position: absolute;
-         top: 80%;
+         top: 10%;
          left: 100%;
          margin-left: -5px;
          border-width: 5px;
