--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -74,18 +74,19 @@
     width: 40px;
     height: 40px;
     position: fixed;
-    margin-left: 1233px;
+    margin-left: 1220px;
     display: inline-block;
-    bottom: 497px;
+    bottom: 495px;
     z-index: 2;
     border-radius: 5px;
+    color: white;
     }
     .helpBtn1 .helpText{
     visibility: hidden;
     width: 180px;
     height: 245px;
     background-color: #E9AD9C;
-    color: black;
+    color: white;
     text-align: center;
     border-radius: 5px;
     padding: 7px 0;
@@ -127,13 +128,14 @@
     bottom: 511px;
     z-index: 2;
     border-radius: 5px;
+    color: white;
     }
     .helpBtn2 .helpText{
     visibility: hidden;
     width: 170px;
     height: 190px;
     background-color: #E9AD9C;
-    color: black;
+    color: white;
     text-align: center;
     border-radius: 5px;
     padding: 7px 0;
