--- a/frontend/static/html/index.css
+++ b/frontend/static/html/index.css
@@ -57,6 +57,7 @@ html, body {
     margin-left: 855px;
     z-index: 2;
     border-radius: 5px;
+    color: white;
 }
 
 #buttonLogin{
@@ -70,6 +71,7 @@ html, body {
     display: none;
     z-index: 2;
     border-radius: 5px;
+    color: white;
 }
 /* creates Help Button LogIn*/
     .help{
@@ -83,13 +85,14 @@ html, body {
     bottom: 420px;
     z-index: 2;
     border-radius: 5px;
+    color: white;
     }
     .help .helpText{
     visibility: hidden;
     width: 150px;
     height: 170px;
     background-color: #E9AD9C;
-    color: black;
+    color: white;
     text-align: center;
     border-radius: 5px;
     padding: 7px 0;
@@ -131,19 +134,20 @@ html, body {
     bottom: 560px;
     z-index: 2;
     border-radius: 5px;
+    color: white;
     }
     .helpRe .helpText{
     visibility: hidden;
-    width: 150px;
-    height: 80px;
+    width: 153px;
+    height: 70px;
     background-color: #E9AD9C;
-    color: black;
+    color: white;
     text-align: center;
     border-radius: 5px;
     padding: 7px 0;
     position: absolute;
     z-index: 1;
-    bottom: -155%;
+    bottom: -112%;
     left: -230%;
     margin-left: -70px;
     opacity: 0;
