--- a/frontend/static/html/shootout.css
+++ b/frontend/static/html/shootout.css
@@ -24,6 +24,19 @@ a{
 
 #ShootoutÜbersicht {
     margin-top: 130px;
+    margin-left: 50px;
+    margin-right:50px;
+    border-spacing: 7px;
+
+}
+
+table, th, td {
+    padding: 5px;
+}
+
+#spalte {
+    width: 30%;
+
 }
 
 #ranking {
