--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -165,7 +165,54 @@
     cursor: pointer;
     opacity: 0.9;}
 
-
+/*Creates help button Pop-up Create new shootout*/
+.helpBtn5{
+    background-color: #E9AD9C;
+    border: none;
+    width: 40px;
+    height: 20px;
+    position: fixed;
+    margin-left: -105px;
+    display: inline-block;
+    bottom: 375px;
+    z-index: 2;
+    border-radius: 5px;
+    color: white;
+    }
+    .helpBtn5 .helpText{
+    visibility: hidden;
+    width: 170px;
+    height: 120px;
+    background-color: #E9AD9C;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    padding: 7px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: -500%;
+    left: 290%;
+    margin-left: -70px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    }
+    .helpBtn5 .helpText::after{
+    content: "";
+    position: absolute;
+    top: 10%;
+    left: 0%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #E9AD9C transparent transparent transparent;
+    }
+    .helpBtn5:hover .helpText{
+    visibility: visible;
+    opacity: 1;
+    }
+    .helpBtn5:hover{
+    cursor: pointer;
+    opacity: 0.9;}
 
 /*Sidebar left*/
 @import url("https://bootswatch.com/flatly/bootstrap.min.css");
