--- a/frontend/static/html/shootout.css
+++ b/frontend/static/html/shootout.css
@@ -1,11 +1,14 @@
 table{
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid white;
     align-items: center;
     border-radius: 3px;
 }
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
 td, th{
-    border: 1px solid black;
+    border: 1px solid white;
     text-align: left;
     padding: 50px;
 }
@@ -36,7 +39,8 @@ table, th, td {
 
 #spalte {
     width: 30%;
-
+    background:#E9AD9C;
+    color: #fff;
 }
 
 #ranking {
