--- a/frontend/static/html/shootout.css
+++ b/frontend/static/html/shootout.css
@@ -1,5 +1,5 @@
 table{
-    width: 100%;
+    width: 90%;
     border: 1px solid white;
     align-items: center;
     border-radius: 3px;
@@ -9,17 +9,18 @@ tr:nth-child(even) {
 }
 td, th{
     border: 1px solid white;
-    text-align: left;
     padding: 50px;
-    text-align: middle;
+
 }
 th{
     font-size: 25px;
     height: 50px;
     color: #6F9EB2​;
+
 }
 td{
     font-size: 18px;
+    text-align: center;
 }
 a{
     text-decoration: none;
@@ -42,10 +43,15 @@ table, th, td {
     width: 30%;
     background:#E9AD9C;
     color: #fff;
+    text-align: center;
+
 }
 
 #ranking {
     margin-top: 80px;
+    text-align: center;
+}
+#caption{
     text-align: center;
 }
 
