searchbar function bei compare.html und shootoutÜbersicht.html

--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -247,7 +247,7 @@
 #sidebar {
     padding:15px;
     margin-top:80px;
-    position: fixed;
+    position: absolute;
 }
 
 #search_shootout {
@@ -265,7 +265,44 @@
     margin-top: 15px;
     color:#fff;
 }
-/* End Sidebar left*/
+
+* {
+  box-sizing: border-box;
+}
+
+#shootout_input {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 12px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+#shootoutlist {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#shootoutlist li a {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block
+}
+
+#shootoutlist li a:hover:not(.header) {
+  background-color: #eee;
+}
+
+/*End Sidebar left*/
 
 footer {
   padding-left: 15px;
