--- a/frontend/static/html/shootout.css
+++ b/frontend/static/html/shootout.css
@@ -68,7 +68,7 @@ table, th, td {
      position: fixed;
      margin-left: 1142px;
      display: inline-block;
-     bottom: 490px;
+     bottom: 510px;
      z-index: 2;
      border-radius: 5px;
      color: white;
@@ -156,3 +156,8 @@ table, th, td {
          .helpBtn4:hover{
          cursor: pointer;
          opacity: 0.9;}
+
+.container {
+    margin: auto;
+    width: 80%;
+    margin-left: 30%;}
