anpassungen bei searchbar suchfunktion

--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -292,13 +292,13 @@
   margin-bottom: 12px;
 }
 
-#shootoutlist {
+#shootouttable {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-#shootoutlist li a {
+#shootouttable li a {
   border: 1px solid #ddd;
   margin-top: -1px; /* Prevent double borders */
   background-color: #f6f6f6;
@@ -309,7 +309,7 @@
   display: block
 }
 
-#shootoutlist li a:hover:not(.header) {
+#shootouttable li a:hover:not(.header) {
   background-color: #eee;
 }
 
