--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -346,6 +346,7 @@ footer {
     padding: 1em 2em;
     color:#fff;
     border:0;
+    border-radius: 5px;
 }
 .close{
     color:#ccc;
@@ -388,10 +389,10 @@ footer {
     color: #ffffff;
     padding: 1em 2em;
     font-size: 14px;
-    height: 50px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
+    height: 40px;
 }
 .dropdownKategorie{
     position: relative;
