--- a/frontend/static/html/dataAnalyticsDashboard.css
+++ b/frontend/static/html/dataAnalyticsDashboard.css
@@ -78,3 +78,20 @@ font-size: 28px;}
 margin-left: 600px;
 margin-top: 150px;
 }
+
+.btnAdmin{
+    background-color: transparent;
+    border: none;
+    width: 90px;
+    height: 40px;
+    position: fixed;
+    margin-left: 1050px;
+    display: inline-block;
+    top: 2.5%;
+    z-index: 2;
+    border-radius: 5px;
+    font-color: white;
+    color: #FFFFFF;
+    font-size: 18px;
+    }
+
