--- a/frontend/static/html/dataAnalyticsDashboard.css
+++ b/frontend/static/html/dataAnalyticsDashboard.css
@@ -82,6 +82,22 @@ margin-top: 150px;
 .btnAdmin{
     background-color: transparent;
     border: none;
+    width: 150px;
+    height: 40px;
+    position: fixed;
+    margin-left: 1030px;
+    display: inline-block;
+    top: 2.5%;
+    z-index: 2;
+    border-radius: 5px;
+    font-color: white;
+    color: #FFFFFF;
+    font-size: 18px;
+    }
+
+.btnAdmin1{
+    background-color: transparent;
+    border: none;
     width: 90px;
     height: 40px;
     position: fixed;
