--- a/frontend/static/html/dataAnalyticsDashboard.css
+++ b/frontend/static/html/dataAnalyticsDashboard.css
@@ -11,7 +11,7 @@
     text-align: center;
     line-height: 280px;
     font-size: 25px;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 
@@ -77,4 +77,10 @@ font-size: 28px;}
 .form-group{
 margin-left: 600px;
 margin-top: 150px;
+}
+
+NumberOfShootouts {
+    font: 400 100px/1.3 'Oleo Script', Helvetica, sans-serif;
+    color: #2b2b2b;
+    text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 }
