--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -434,6 +434,16 @@ footer {
     background-color: #aaaaaa;
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(15,10,10);
+    text-align: center;
+    color: lightgray;
+    height: 25px;
+}
 /*Profile Flexbox---------------------------------*/
 /** {
     box-sizing: border-box;
