--- a/frontend/static/html/page.css
+++ b/frontend/static/html/page.css
@@ -44,4 +44,15 @@
  margin-top: 20px;
  margin-bottom: 20px;
  }
-
+.footer {
+    position: fixed;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(15,10,10);
+    text-align: center;
+    color: lightgray;
+    height: 25px;
+    z-index: 10;
+}
