--- a/frontend/static/html/allusers.css
+++ b/frontend/static/html/allusers.css
@@ -43,6 +43,18 @@
     visibility: visible;
     opacity: 1;
     }
+    .footer {
+        position: fixed;
+        display: block;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: rgb(15,10,10);
+        text-align: center;
+        color: lightgray;
+        height: 25px;
+        z-index: 10;
+    }
     .helpBtn6:hover{
     cursor: pointer;
     opacity: 0.9;}
