--- a/frontend/static/html/leaderboards.css
+++ b/frontend/static/html/leaderboards.css
@@ -16,6 +16,18 @@ hr{
     background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
 
+.footer {
+    position: fixed;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(15,10,10);
+    text-align: center;
+    color: lightgray;
+    height: 25px;
+    z-index: 10;
+}
 /*
 #course{
     box-shadow: var(--shadow);
