--- a/frontend/static/html/dataAnalyticsDashboard.css
+++ b/frontend/static/html/dataAnalyticsDashboard.css
@@ -1,4 +1,4 @@
-.flex-container {
+/*.flex-container {
     display: flex;
     flex-wrap: wrap;
     margin-top:50px;
@@ -12,7 +12,7 @@
     line-height: 280px;
     font-size: 25px;
     margin-top: 5%;
-}
+}*/
 
 
 .navbar-brand{
@@ -84,3 +84,44 @@ NumberOfShootouts {
     color: #2b2b2b;
     text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 }
+
+ * {
+     box-sizing: border-box;
+ }
+
+/* Create three unequal columns that floats next to each other */
+.column {
+    float: left;
+    padding: 10px;
+    height: 350px; /* Should be removed. Only for demonstration */
+    width: 30%;
+    margin: 18px;
+    margin-top: 100px;
+    background-color: #f1f1f1;
+}
+
+/*.left, .middle {
+    width: 25%;
+}
+
+.right {
+    width: 50%;
+}*/
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.button {
+    background-color: #f1f1f1;
+    color: #f1f1f1;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    }
