--- a/frontend/static/html/dataAnalyticsDashboard.css
+++ b/frontend/static/html/dataAnalyticsDashboard.css
@@ -83,7 +83,11 @@ NumberOfShootouts {
     font: 400 100px/1.3 'Oleo Script', Helvetica, sans-serif;
     color: #2b2b2b;
     text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
+    text-align: center;
+    vertical-align: middle;
+    line-height: 300px;
 }
+
 .footer {
     position: fixed;
     display: block;
@@ -106,3 +110,35 @@ NumberOfShootouts {
      margin-top: -20px;
      margin-left: 950px;
      }
+
+
+* {
+    box-sizing: border-box;
+    text-align: left;
+}
+/* Create three unequal columns that floats next to each other */
+.columnDash {
+    float: left;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    height: 400px;
+    margin:20px;
+    width: 45%;
+    margin-top: 100px;
+    background-color: #f1f1f1;
+    text-align: center;
+    padding: 1.5rem 2rem;
+    box-shadow: var(--shadow);
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+h1 {
+    text-align: center;
+    font-weight: bold;
+}
